[Lanai-264] Fix bug the footer broken in sm and md

--- a/Lanai/Lanai/Content/Site.css
+++ b/Lanai/Lanai/Content/Site.css
@@ -384,7 +384,7 @@ section.top-menu{
     margin-top:57px;
 }
 .footer-content{
-    margin-top:124px;
+    margin-top:64px;
 }
 #download-icon{
     background-image:url(/Images/Download.png);
